--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,10 @@
-
+body {
+    background-color: #86c5d6;
+    border: 15px solid #868686;
+    padding: 50px;
+    margin: 20px;
+    width: 50px;
+    height: 70%;
+    line-height: 1.5;
+}
 
