--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,19 @@
 }
 
 body {
-    background-image: linear-gradient(100deg, #53BAD2, #6551CF, #5AB4DA);
-    /*border: 10px solid #868686;*/
+    background-image: linear-gradient(to right top, #53bad2, #00a7dc, #0091e4, #0d75e2, #6551cf);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
+    margin: 0;
     font-family: Poppins, sans-serif;
-    
 }
 
 header, div {
-    display: flex;
-    justify-content: center;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    line-height: 1.5;
+    padding-top: 30px;
 }
 
