--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@ div {
 
 ul {
     list-style: none;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
 }
 
 /* button created by js */
@@ -31,7 +33,69 @@ ul {
     border-radius: 12px;
     display: flex;
     justify-content: center;
-    margin: 25px auto ;
+    margin: 25px auto;
     padding: 20px;
-    width: 30%;
+    width: 35%;
+    text-align: center;
+    font-size: 10px;
+    white-space: normal;
+    word-wrap: break-word;
+}
+
+/* modal styling */
+
+#show-dialog,
+#show-modal {
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    margin: 25px auto;
+}
+
+#modal-container {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+
+    /* to show it above other content */
+    z-index: 999;
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto;
+    display: grid;
+    text-align: center;
+    display: none;
+}
+
+.modal {
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    margin: auto;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 15px;
+    margin-top: 30vh;
+    width: 100%;
+    max-width: 700px;
+    text-align: center;
+}
+
+.modal-close {
+    float: right;
+    -webkit-appearance: none;
+    border: 0;
+    background: none;
+    color: #696969;
+    text-decoration: underline;
+}
+
+
+#modal-container.is-visible {
+    background: rgba(0, 0, 0, 0.5);
+    display: block;
+
 }
