--- a/css/styles.css
+++ b/css/styles.css
@@ -33,13 +33,16 @@ ul {
     border-radius: 12px;
     display: flex;
     justify-content: center;
+    font-size: 15px;
     margin: 25px auto;
-    padding: 20px;
+    padding: 40px;
     width: 35%;
     text-align: center;
-    font-size: 10px;
     white-space: normal;
-    word-wrap: break-word;
+}
+
+.button:hover {
+    background-color: #53bad2;
 }
 
 /* modal styling */
@@ -71,6 +74,7 @@ ul {
     display: none;
 }
 
+
 .modal {
     background: rgba(0, 0, 0, 0.5);
     color: white;
@@ -81,7 +85,7 @@ ul {
     margin-top: 30vh;
     width: 100%;
     max-width: 700px;
-    text-align: center;
+    text-align: center;    
 }
 
 .modal-close {
@@ -98,4 +102,9 @@ ul {
     background: rgba(0, 0, 0, 0.5);
     display: block;
 
+}
+
+.img {
+    height: 50%;
+    width: 50%;
 }
